# PostgreSQL

./: .gitignore  404.html  Recursos.md  index.html  mkdocs.yml  mkdocs.yml.bak  nav.py  nav.yml  publica.sh  pyproject.toml
.obsidian/: workspace.json
00.-Conceptos Básicos sobre SGBD/01.-Datos y archivos/: index.html
00.-Conceptos Básicos sobre SGBD/02.-Tipos de gestión de Información mediante el ordenador/: index.html
00.-Conceptos Básicos sobre SGBD/03.-Funcionamiento de un SGBD/: index.html
00.-Conceptos Básicos sobre SGBD/04.-Tipos de SGBD/: index.html
00.-Conceptos Básicos sobre SGBD/05.-Archivos/: index.html
00.-Conceptos Básicos sobre SGBD/06.-Estándares y modelo ANSI/: index.html
01.-Tutorial/: index.html
02.- El lenguaje SQL/: index.html
02.-El lenguaje SQL/: index.html
02.-El lenguaje SQL/02.-Definición de Datos/: index.html
02.-El lenguaje SQL/03.-Manipulación de Datos/: index.html
02.-El lenguaje SQL/04.-Consultas/: index.html
02.-El lenguaje SQL/05.-Tipos de Datos/: index.html
02.-El lenguaje SQL/06.-Funciones y operadores/: index.html
02.-El lenguaje SQL/07.-Conversión de tipos/: index.html
02.-El lenguaje SQL/08.-Índices/: index.html
02.-El lenguaje SQL/09.-Búsqueda de texto completo/: index.html
02.-El lenguaje SQL/11.-Consejos de rendimiento/: index.html
02.-El lenguaje SQL/12.-Consultas paralelas/: index.html
02.-Tutorial Avanzado/00.-Base de datos PostgreSQL de ejemplo/: index.html
docs/: index.md
preguntas/: cambia.py  tema0.gift  tema0new.gift
search/: search_index.json
site/: 404.html  index.html
(+1324 files in other folders)
